--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,10 @@
     <string name="priority_0">一般</string>
     <string name="priority_1">重要</string>
 
+    <string name="empty_view_hint">暂无数据</string>
+    <string name="error_view_hint">加载失败</string>
+    <string name="no_network_view_hint">网络异常</string>
+
 
     <string name="about_content" translatable="false"><![CDATA[
         <h2>网站内容</h2>
