--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="nav_id">ID:</string>
     <string name="nav_grade">等级:</string>
     <string name="nav_rank">排名:</string>
+    <string name="nav_rtc">视频通话</string>
 
     <string name="score">积分</string>
     <string name="score_detail">积分明细</string>
@@ -165,6 +166,13 @@
     <string name="empty_view_hint">暂无数据</string>
     <string name="error_view_hint">加载失败</string>
     <string name="no_network_view_hint">网络异常</string>
+
+    <string name="item_video_conferencing">多人视频会议</string>
+    <string name="item_chat_room">语音聊天室</string>
+    <string name="item_video_interactive_live_streaming">视频互动直播</string>
+    <string name="item_voice_call">语音通话</string>
+    <string name="item_video_call">视频通话</string>
+    <string name="item_chat_salon">语音沙龙</string>
 
 
     <string name="about_content" translatable="false"><![CDATA[
