--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="nav_grade">等级:</string>
     <string name="nav_rank">排名:</string>
     <string name="nav_rtc">视频通话</string>
+    <string name="nav_audio_record">录音</string>
 
     <string name="score">积分</string>
     <string name="score_detail">积分明细</string>
