--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,4 +195,7 @@
 
     <string name="nav_line_4" translatable="false">----</string>
     <string name="nav_line_2" translatable="false">--</string>
+
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
 </resources>
