--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="nav_video">视频播放</string>
     <string name="nav_rtc">视频通话</string>
     <string name="nav_audio_record">录音</string>
+    <string name="nav_pic">图片预览</string>
 
     <string name="score">积分</string>
     <string name="score_detail">积分明细</string>
@@ -177,18 +178,7 @@
     <string name="item_chat_salon">语音沙龙</string>
 
 
-    <string name="about_content" translatable="false"><![CDATA[
-        <h2>网站内容</h2>
-        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
-        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
-        <p>\t\t如果您有任何好的建议：</p>
-            <br/>\t\t\t\t关于网站排版
-            <br/>\t\t\t\t关于新增常用网址以及工具
-            <br/>\t\t\t\t未来你希望增加的功能等
-        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
-        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
-        <h2>源码位置</h2>
-    ]]></string>
+    <string name="about_content" translatable="false">111</string>
 
 
     <string name="copyright_content" translatable="false">本APP所使用的所有API均由 玩Android 网站提供，仅供学习交流，不可用于任何商业用途。</string>
